function(buildExample EXERCISE_NAME)
	SET(EXERCISE_FOLDER ${CMAKE_CURRENT_SOURCE_DIR}/${EXERCISE_NAME})
	message(STATUS "Generating project file for example in ${EXERCISE_FOLDER}")
	file(GLOB SOURCE ${EXERCISE_FOLDER}/*.c)
	add_executable(${EXERCISE_FOLDER}/${EXERCISE_NAME} ${MAIN_CPP} ${SOURCE})
	set_target_properties(${EXERCISE_FOLDER}/${EXERCISE_NAME} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY ${EXERCISE_FOLDER})
endfunction(buildExample)

MACRO(SUBDIRLIST result curdir)
  FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
  SET(dirlist "")
  FOREACH(child ${children})
    IF(IS_DIRECTORY ${curdir}/${child} AND NOT ${child} STREQUAL "CMakeFiles")
      LIST(APPEND dirlist ${child})
    ENDIF()
  ENDFOREACH()
  SET(${result} ${dirlist})
ENDMACRO()

SUBDIRLIST(EXERCISES ${CMAKE_CURRENT_SOURCE_DIR})
function(buildExamples)
	foreach(EXERCISE ${EXERCISES})
		buildExample(${EXERCISE})
	endforeach(EXERCISE)
endfunction(buildExamples)

buildExamples()
